# ask_llm

./: .env.docker  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  TOOL_CALLING_REFACTOR_PLAN.md  check_db.py  docker-compose.dev.yml  docker-compose.yml  install.sh  main.py  pyproject.toml  requirements.txt  run.sh  server.sh  setup.py  start.sh  test_extraction.py  test_nextcloud_send.py  test_profile.py
.cursor/rules/: memory_manager_role.mdc  memory_overview.mdc
.github/: copilot-instructions.md
config/: bots.yaml  models.yaml
docs/: NATIVE_TOOL_CALLING_PLAN.md  NEXTCLOUD_BOT_SETUP.md  NEXTCLOUD_MULTI_BOT_PLAN.md  REFACTOR_PLAN.md  REFACTOR_SUMMARY.md  TOOL_CALLING_REFACTOR_PLAN.md  background-job-plan.md
src/: __init__.py
src/ask_llm/: __init__.py  bots.py  bots.yaml  cli.py  cli_display.py  constants.py  core.py  gguf_handler.py  main.py  memory.py  memory_debug.py  model_manager.py  profiles.py  user_profile.py
src/ask_llm/cli/: __init__.py  app.py  config_wizard.py  parser.py
src/ask_llm/clients/: __init__.py  base.py  huggingface_client.py  llama_cpp_client.py  ollama_client.py  openai_client.py  utils.py
src/ask_llm/core/: __init__.py  base.py  client.py  model_lifecycle.py  pipeline.py  prompt_builder.py
src/ask_llm/integrations/nextcloud/: cli.py  config.py  manager.py  provisioner.py  webhook.py
src/ask_llm/memory/: __init__.py  base.py  consolidation.py  embeddings.py  maintenance.py  mariadb.py  migrations.py  postgresql.py  profile_maintenance.py  short_term.py  summarization.py
src/ask_llm/memory/extraction/: __init__.py  prompts.py  service.py
src/ask_llm/memory_server/: __init__.py  __main__.py  client.py  extraction.py  server.py  storage.py
src/ask_llm/models/: message.py
src/ask_llm/search/: __init__.py  base.py  factory.py  tavily_client.py
src/ask_llm/service/: __init__.py  api.py  client.py  core.py  logging.py  models.py  scheduler.py  server.py  tasks.py
src/ask_llm/shared/: __init__.py  logging.py
src/ask_llm/tools/: __init__.py  definitions.py  executor.py  loop.py  parser.py  streaming.py
src/ask_llm/tools/formats/: react.py  xml_legacy.py
src/ask_llm/utils/: cli_args.py  config.py  console.py  history.py  input_handler.py  ollama_utils.py  paths.py  prompts.py  streaming.py
tests/: conftest.py  test_ask_llm_class.py  test_cli_exceptions.py  test_cli_main_extra.py  test_clients.py  test_core_init.py  test_core_query.py  test_fetch_models.py  test_integration.py  test_main.py  test_main_module.py  test_model_manager_basic.py  test_model_manager_delete_update.py  test_model_manager_list_resolve.py  test_model_manager_utils.py  test_model_manager_wrappers.py  test_models.py  test_openai_client.py  test_parse_args_extra.py  test_run_app_cli.py  test_scheduler.py  test_tool_formats.py  test_tool_loop_integration.py  test_utils.py
